@@ -88,12 +88,12 @@ void Next_ViewPoint(void);		/*  switch to next viewpoint -*/
 void setup_viewpoint(int doBinding);
 void get_collisionoffset(double *x, double *y, double *z);
 
-/* Sensor table. When clicked, we get back from rayHit the fromnode,
+/* Sensor table. When clicked, we get back from getRayHit the fromnode,
 	have to look up type and data in order to properly handle it */
 struct SensStruct {
 	void *fromnode;
 	void *datanode;
-	void (*interpptr)(void *, int, int, int, int *);
+	void (*interpptr)(void *, int, int, int);
 };
 struct SensStruct *SensorEvents = 0;
 int num_SensorEvents = 0;
@@ -109,11 +109,6 @@ double nearPlane=0.1;
 double farPlane=21000.0;
 double screenRatio=1.5;
 double fieldofview=45.0;
-
-/* Umut Sezen's changes for Sensored nodes:  A sensor like (TouchSensor) is included in a group.
-   The browser mouse functionality (like rotation) is disabled whether the sensor is enabled or not. This
-   patch fixes the problem by enabling the browser mouse functionality when the sensors are all disabled. */
-int all_sensitivity_nodes_disabled = TRUE;
 
 unsigned char * CursorOverSensitive=0;		/*  is Cursor over a Sensitive node?*/
 unsigned char * oldCOS=0;			/*  which node was cursor over before this node?*/
@@ -144,7 +139,7 @@ int trisThisLoop;
 int myMaxScript = -1;
 
 /* do we have some sensitive nodes in scene graph? */
-static int HaveSensitive = FALSE;
+int HaveSensitive = FALSE;
 
 /* Function protos */
 void do_keyPress(char kp, int type);
@@ -155,9 +150,9 @@ void setup_projection(int pick, int x, int y);
 void glPrintError(char *str);
 void XEventStereo(void);
 void EventLoop(void);
-unsigned char*  rayHit(void);
+unsigned char*  getRayHit(void);
 void get_hyperhit(void);
-int sendSensorEvents(unsigned char *COS,int ev, int butStatus, int status);
+void sendSensorEvents(unsigned char *COS,int ev, int butStatus, int status);
 Boolean firstTime;
 Boolean pluginRunning;
 Boolean inLoop;
@@ -223,6 +218,7 @@ void EventLoop() {
 	if (cc_changed) doglClearColor();
 
 	OcclusionStartofEventLoop();
+	startOfLoopNodeUpdates();
 
 	/* First time through */
 	if (loop_count == 0) {
@@ -389,31 +385,31 @@ void EventLoop() {
 		setup_projection(TRUE,currentX,currentY);
 		setup_viewpoint(FALSE);
 		render_hier(rootNode,VF_Sensitive);
-		CursorOverSensitive = rayHit();
+		CursorOverSensitive = getRayHit();
 
 		/* did we have a click of button 1? */
 		if (ButDown[1] && (lastPressedOver==0)) {
 			/*  printf ("Not Navigation and 1 down\n");*/
 			/* send an event of ButtonPress and isOver=true */
 			lastPressedOver = CursorOverSensitive;
-			all_sensitivity_nodes_disabled = sendSensorEvents(lastPressedOver, ButtonPress, ButDown[1], TRUE);
+			sendSensorEvents(lastPressedOver, ButtonPress, ButDown[1], TRUE);
 		}
 
 		if ((ButDown[1]==0) && lastPressedOver) {
 			/*  printf ("Not Navigation and 1 up\n");*/
 			/* send an event of ButtonRelease and isOver=true;
 			   an isOver=false event will be sent below if required */
-			all_sensitivity_nodes_disabled = sendSensorEvents(lastPressedOver, ButtonRelease, ButDown[1], TRUE);
+			sendSensorEvents(lastPressedOver, ButtonRelease, ButDown[1], TRUE);
 			lastPressedOver = 0;
 		}
 
 		if (lastMouseEvent == MotionNotify) {
 			/* printf ("Not Navigation and motion - going into sendSensorEvents\n"); */
 			/* TouchSensor hitPoint_changed needs to know if we are over a sensitive node or not */
-			all_sensitivity_nodes_disabled = sendSensorEvents(CursorOverSensitive,MotionNotify, ButDown[1], TRUE);
+			sendSensorEvents(CursorOverSensitive,MotionNotify, ButDown[1], TRUE);
 
 			/* PlaneSensors, etc, take the last sensitive node pressed over, and a mouse movement */
-			all_sensitivity_nodes_disabled = sendSensorEvents(lastPressedOver,MotionNotify, ButDown[1], TRUE);
+			sendSensorEvents(lastPressedOver,MotionNotify, ButDown[1], TRUE);
 		}
 
 
@@ -430,8 +426,8 @@ void EventLoop() {
 			/* is this a new node that we are now over?
 			   don't change the node pointer if we are clicked down */
 			if ((lastPressedOver==0) && (CursorOverSensitive != oldCOS)) {
-				all_sensitivity_nodes_disabled = sendSensorEvents(oldCOS,MapNotify,ButDown[1], FALSE);
-				all_sensitivity_nodes_disabled = sendSensorEvents(CursorOverSensitive,MapNotify,ButDown[1], TRUE);
+				sendSensorEvents(oldCOS,MapNotify,ButDown[1], FALSE);
+				sendSensorEvents(CursorOverSensitive,MapNotify,ButDown[1], TRUE);
 				oldCOS=CursorOverSensitive;
 			}
 
@@ -453,17 +449,9 @@ void EventLoop() {
 
 			/* were we over a sensitive node? */
 			if (oldCOS!=0) {
-				all_sensitivity_nodes_disabled = sendSensorEvents(oldCOS,MapNotify,ButDown[1], FALSE);
+				sendSensorEvents(oldCOS,MapNotify,ButDown[1], FALSE);
 				oldCOS=0;
 			}
-		}
-
-                if (all_sensitivity_nodes_disabled) {
-#ifndef AQUA
-				cursor = arrowc;
-#else
-				ccurse = ACURSE;
-#endif
 		}
 
 		/* do we have to change cursor? */
@@ -546,6 +534,7 @@ void handle_Xevents(XEvent event) {
 	int count;
 
 	lastMouseEvent=event.type;
+
 	switch(event.type) {
 		#ifdef HAVE_NOTOOLKIT
 		/* Motif, etc, usually handles this. */
@@ -605,7 +594,7 @@ void handle_Xevents(XEvent event) {
 			/* if we are Not over an enabled sensitive node, and we do NOT
 			   already have a button down from a sensitive node... */
 			/* printf("cursoroversensitive is %d\n", CursorOverSensitive); */
-			if (all_sensitivity_nodes_disabled || ((CursorOverSensitive==0) && (lastPressedOver==0)))  {
+			if ((CursorOverSensitive==0) && (lastPressedOver==0))  {
 				NavigationMode=ButDown[1] || ButDown[3];
 				handle (event.type,event.xbutton.button,
 					(float) ((float)event.xbutton.x/screenWidth),
@@ -940,16 +929,16 @@ void do_keyPress(const char kp, int type) {
 	}
 }
 
-unsigned char* rayHit() {
+unsigned char* getRayHit() {
         double x,y,z;
 
         if(hpdist >= 0) {
-                gluUnProject(hp.x,hp.y,hp.z,rh.modelMatrix,rh.projMatrix,viewport,&x,&y,&z);
+                gluUnProject(hp.x,hp.y,hp.z,rayHit.modelMatrix,rayHit.projMatrix,viewport,&x,&y,&z);
 
                 /* and save this globally */
                 ray_save_posn.c[0] = x; ray_save_posn.c[1] = y; ray_save_posn.c[2] = z;
 
-                return ((unsigned char*) rh.node);
+                return ((unsigned char*) rayHit.node);
         } else {
                 return(0);
         }
@@ -977,17 +966,6 @@ void setSensitive(void *parentNode,void *datanode) {
 		default: return;
 	}
 
-	/* mark THIS node as sensitive. */
-	p = parentNode;
-	p->_sens = TRUE;
-
- 	/* and tell the rendering pass that there is a sensitive node down*/
- 	 /* this branch */
-/* 	update_renderFlag(p,VF_Sensitive);*/
-
-	/* tell mainloop that we have to do a sensitive pass now */
-	HaveSensitive = TRUE;
-
 	/* record this sensor event for clicking purposes */
 	SensorEvents = REALLOC(SensorEvents,sizeof (struct SensStruct) * (num_SensorEvents+1));
 
@@ -1007,9 +985,8 @@ void setSensitive(void *parentNode,void *datanode) {
 
 /* we have a sensor event changed, look up event and do it */
 /* note, ProximitySensor events are handled during tick, as they are time-sensitive only */
-int sendSensorEvents(unsigned char * COS,int ev, int butStatus, int status) {
+void sendSensorEvents(unsigned char * COS,int ev, int butStatus, int status) {
 	int count;
-	int disabled = TRUE;
 
 	/* if we are not calling a valid node, dont do anything! */
 	if (COS==0) return;
@@ -1028,12 +1005,11 @@ int sendSensorEvents(unsigned char * COS,int ev, int butStatus, int status) {
 			}
 
 
-			SensorEvents[count].interpptr(SensorEvents[count].datanode, ev,butStatus, status, &disabled);
+			SensorEvents[count].interpptr(SensorEvents[count].datanode, ev,butStatus, status);
 			/* return; do not do this, incase more than 1 node uses this, eg,
 				an Anchor with a child of TouchSensor */
 		}
 	}
-	return disabled;
 }
 
 
@@ -1044,11 +1020,11 @@ void get_hyperhit() {
 	GLdouble projMatrix[16];
 
 	fwGetDoublev(GL_PROJECTION_MATRIX, projMatrix);
-	gluUnProject(r1.x, r1.y, r1.z, rhhyper.modelMatrix,
+	gluUnProject(r1.x, r1.y, r1.z, rayHitHyper.modelMatrix,
 		projMatrix, viewport, &x1, &y1, &z1);
-	gluUnProject(r2.x, r2.y, r2.z, rhhyper.modelMatrix,
+	gluUnProject(r2.x, r2.y, r2.z, rayHitHyper.modelMatrix,
 		projMatrix, viewport, &x2, &y2, &z2);
-	gluUnProject(hp.x, hp.y, hp.z, rh.modelMatrix,
+	gluUnProject(hp.x, hp.y, hp.z, rayHit.modelMatrix,
 		projMatrix,viewport, &x3, &y3, &z3);
 
 	/* printf ("get_hyperhit in VRMLC %f %f %f, %f %f %f, %f %f %f\n",*/
@@ -1579,7 +1555,7 @@ void freewrlDie (const char *format) {
 void handle_aqua(const int mev, const unsigned int button, const float x, const float y) {
         if ((mev == ButtonPress) || (mev == ButtonRelease))
         {
-                if (all_sensitivity_nodes_disabled || ((CursorOverSensitive ==0) && (lastPressedOver ==0))) {
+                if ((CursorOverSensitive ==0) && (lastPressedOver ==0)) {
 			NavigationMode=ButDown[1] || ButDown[3];
                         handle(mev, button, x, y);
                 }
