@@ -8,7 +8,7 @@
 *********************************************************************/
 
 /*
- * $Id: OpenGL_Utils.c,v 1.68 2007/08/15 12:53:21 crc_canada Exp $
+ * $Id: OpenGL_Utils.c,v 1.69 2007/08/24 15:13:42 crc_canada Exp $
  *
  */
 #include "headers.h"
@@ -494,6 +494,92 @@ void zeroVisibilityFlag(void) {
 			node->_renderFlags = node->_renderFlags | VF_hasVisibleChildren;
 		}	
 	}
+}
+
+/* go through the linear list of nodes, and do "special things" for special nodes, like
+   Sensitive nodes */
+
+void startOfLoopNodeUpdates(void) {
+	struct X3D_Node* node;
+	struct X3D_Node* parents;
+	void **pp;
+	int nParents;
+	int i,j;
+
+	/* assume that we do not have any sensitive nodes at all... */
+	HaveSensitive = FALSE;
+
+	/* go through the node table, and zero any bits of interest */
+	for (i=0; i<nextEntry; i++){		
+		node = (struct X3D_Node*)memoryTable[i];		
+		node->_renderFlags = node->_renderFlags & (0xFFFF^VF_Sensitive);
+		node->_renderFlags = node->_renderFlags & (0xFFFF^VF_hasSensitiveChildren);
+	}
+
+	/* find ENABLED sensitive nodes, for mouse clicking */
+	for (i=0; i<nextEntry; i++){		
+		node = (struct X3D_Node*)memoryTable[i];		
+		nParents = 0;
+
+		switch (node->_nodeType) {
+
+			/* get ready to mark these nodes as Mouse Sensitive */
+			case NODE_PlaneSensor:
+				if (((struct X3D_PlaneSensor *)node)->enabled) {
+					nParents = ((struct X3D_PlaneSensor *)node)->_nparents;
+					pp = (((struct X3D_PlaneSensor *)node)->_parents);
+				}
+				break;
+			
+	
+			case NODE_TouchSensor:
+				if (((struct X3D_TouchSensor *)node)->enabled) {
+					nParents = ((struct X3D_TouchSensor *)node)->_nparents;
+					pp = (((struct X3D_TouchSensor *)node)->_parents);
+				}
+				break;
+	
+			case NODE_SphereSensor:
+				if (((struct X3D_SphereSensor *)node)->enabled) {
+					nParents = ((struct X3D_SphereSensor *)node)->_nparents;
+					pp = (((struct X3D_SphereSensor *)node)->_parents);
+				}
+				break;
+	
+			case NODE_CylinderSensor:
+				if (((struct X3D_CylinderSensor *)node)->enabled) {
+					/* mark THIS node as sensitive. */
+					nParents = ((struct X3D_CylinderSensor *)node)->_nparents;
+					pp = (((struct X3D_CylinderSensor *)node)->_parents);
+				}
+				break;
+
+			case NODE_GeoTouchSensor:
+				if (((struct X3D_GeoTouchSensor *)node)->enabled) {
+					nParents = ((struct X3D_GeoTouchSensor *)node)->_nparents;
+					pp = (((struct X3D_GeoTouchSensor *)node)->_parents);
+				}
+				break;
+		}
+
+		/* now, act on this node  for Sensitive nodes. here we tell the PARENTS that they
+		   are sensitive */
+		if (nParents != 0) {
+			for (j=0; j<nParents; j++) {
+				struct X3D_Node *n = (struct X3D_Node *)pp[j];
+				n->_renderFlags = n->_renderFlags  | VF_Sensitive;
+
+ 				/* and tell the rendering pass that there is a sensitive node down*/
+ 	 			/* this branch */
+				
+				update_renderFlag(n,VF_hasSensitiveChildren);
+				
+			}
+
+			/* tell mainloop that we have to do a sensitive pass now */
+			HaveSensitive = TRUE;
+		}
+	}			
 }
 
 
